# buoya-ai-cli

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/config/: config.toml.example  mod.rs
src/llm/: mod.rs
src/llm/agent/: mod.rs  providers.rs
src/llm/tools/: file_explorer.rs  file_reader.rs  mod.rs
src/llm/tools/file_explorer/: find_files.rs  get_file_info.rs  list_directory.rs  mod.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/components/: chat_history.rs  input_box.rs  mod.rs
src/types/: mod.rs
