[package]
name = "buoya-ai-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.30"
ratatui-crossterm = "0.1"
rig-core = "0.35.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
toml = "1.1.2"
tui-markdown = "0.3.7"
tui-textarea = "0.7"
walkdir = "2.5.0"
